  * Little Rook Chess ported
  * ST7920 HW and SW SPI
2016-06-26	v2.0.7	  olikraus@gmail.com
  * drawLine
  * GraphicsTest Example
2016-08-09	v2.1.5	  olikraus@gmail.com
  * T6963 Support
  * Experimental Support for SSD1322 256x64
  * A2 Thermoprinter Support
  * Added several fonts from http://int10h.org/oldschool-pc-fonts/
  * Added Arabic, Greek and Cyrillic fonts.
  * Code cleanup (assert, spi modes, void * warning)
2016-08-17	v2.2.7	  olikraus@gmail.com
  * U8x8: Upscale by 2 (Issue 41)
  * Fixed SSD1306 I2C procedures (mirror pixel in last tile column, issue 44)
  * Experimental support für mini12864 (pull request)
  * Use beginTransaction for SPI. This requires Arduino 1.6.0
2016-08-18	v2.3.2	  olikraus@gmail.com
 * MINI12874; Fixed HW Flip Mode (pull request 49)
 * Fixed ST7920 HW SPI with very fast uC, issue 50
 * Improved HW SPI for SH1106 and SSD1306 displays
 * Fixed issue with missing fonts
2016-08-21	v2.4.1	olikraus@gmail.com
 * Fixed HW SPI Modes (issue 52)
2016-10-01	v2.5.2	 olikraus@gmail.com
 * Added crox fonts (issue 57)
 * Support for RA8835 (issue 45)
 * Added support for SSD1322 and SSD1325
 * Added DrawXBMP (AVR: Assume bitmap in PROGMEM)
 * Added japanese fonts (issue 65)
2016-11-13	v2.6.3	 olikraus@gmail.com
 * Added support for UC1610 (EA DOGXL160)
 * Use Wire.setClock() for improved HW I2C performance (issue 79). This
    requires Arduino IDE 1.6.0 or higher.
 * Added Thai Fonts (issue 73)
 * Added support for "\n" in the print function for u8x8 (issue 74)
 * Screen mirror option for U8g2 (issue 76)
 * Added support for second wire interface (Constructor postfix 2ND_HW_I2C)
 * Added support for UC1611 (EA DOGM240 and EA DOGXL240, issue 66)
2016-xx-xx	v2.7.x	 olikraus@gmail.com
  * Added support for 0.66" 64x48 SSD1306 OLED (issue 89)
  * Support for UC1608 (issue 92)
  * Speed improvements for SW SPI und 8080 mode (issues 87, 90 and 95)
  * Fixed issue with ST7920 not using the optimized SW SPI procedures (issue 87)