@@ -1,5 +1,5 @@
 name=U8g2
-version=2.7.2
+version=2.7.5
 author=oliver <olikraus@gmail.com>
 maintainer=oliver <olikraus@gmail.com>
 sentence=Library for monochrome LCDs and OLEDs. Successor of U8glib. Features: UTF8, >700 fonts, all Arduino Boards supported 
